--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "langchain-extraction",
   "version": "0.1.0",
   "private": true,
+  "description": "A project for extracting information using LangChain and OpenAI.",
+  "keywords": [
+    "langchain",
+    "openai",
+    "information extraction",
+    "react",
+    "next.js"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
